# kakuyomu-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  kakuyomu.ipynb  pyproject.toml
.github/workflows/: cicd.yml  claude.yml
kakuyomu_mcp/: main.py
