[tool.poetry]
name = "kakuyomu-mcp"
version = "1.0.0"
description = "小説投稿サイト、カクヨムを読むためのMCPサーバー"
authors = ["106- <segmentation-fault@yandex.com>"]
packages = [{ include = "kakuyomu_mcp" }]

[tool.poetry.dependencies]
python = ">=3.10"
mcp = { extras = ["cli"], version = "^1.9.2" }
beautifulsoup4 = "^4.13.4"
requests = "^2.31.0"

[tool.poetry.scripts]
kakuyomu-mcp = "kakuyomu_mcp.main:main"

[tool.poetry.group.dev.dependencies]
uv = "^0.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
